main: footer is done

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href="./event.html" class="dropbtn">EVENT</a>
                     <aside class="dropdown-content">
                         <a href="./event.html#top3">Top 3 Festivals</a>
-                        <a href="./event.html#eFeature">Feature</a>
+                        <a href="./event.html#eFeature">Featured Event</a>
                         <a href="./event.html#eList">Event List</a>
                         <a href="./event.html#eReference">References</a>
                     </aside>
@@ -60,7 +60,7 @@
                     <a href="./event.html">EVENT</a>
                     <ul>
                         <li><a href="./event.html#top3">Top 3 Festivals</a></li>
-                        <li><a href="./event.html#eFeature">Feature</a></li>
+                        <li><a href="./event.html#eFeature">Featured Event</a></li>
                         <li><a href="./event.html#eList">Event List</a></li>
                         <li><a href="./event.html#eReference">References</a></li>
                     </ul>
@@ -238,11 +238,11 @@
         <section>
             <article>
                 <aside>
-                    <h6>about</h6>
+                    <h6>pages</h6>
                     <ul>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">about</a></li>
+                        <li><a href="./index.html">home</a></li>
+                        <li><a href="./event.html">event</a></li>
+                        <li><a href="./place.html">place</a></li>
                     </ul>
                 </aside>
                 <aside>
@@ -253,6 +253,8 @@
                         <li><a href="#">Terms and Condition</a></li>
                     </ul>
                 </aside>
+            </article>
+            <article>
                 <aside>
                     <h6>Contact</h6>
                     <ul>
@@ -261,30 +263,29 @@
                         <li><a href="#" class="fa-brands fa-github"></a></li>
                         <li><a href="#" class="fa-brands fa-linkedin-in"></a></li>
                     </ul>
-                    <i class="fa-solid fa-phone">889 W Pender St #200, Vancouver, BC V6C 3B2</i>
-                    <i class="fa-regular fa-envelope">+16048994480</i>
-                    <address>889 W Pender St #200, Vancouver, BC V6C 3B2</address>
+                    <a href="tel:+16048994480"><i class="fa-solid fa-phone"></i> +16048994480</a>
+                    <address><i class="fa-regular fa-envelope"></i> 889 W Pender St #200, Vancouver, BC V6C 3B2</address>
                 </aside>
-                <aside>
+                <form>
                     <h6>Newsletter</h6>
                     <article>
                         <input type="email" name="email" placeholder='Email address'>
-                        <input type="subit" name="submit" value='U+2192'>
+                        <input type="submit" name="submit" value='&#x2192;'>
                     </article>
                     <article>
                         <input type="checkbox" name='subscribe'>
-                        Subscribe to receive communications from Aesop about our products and services. By subscribing, you confirm you have read and accept our privacy policy 
+                        Subscribe to receive communications from HangVan about our products and services. By subscribing, you confirm you have read and accept our privacy policy 
                     </article>
-                </aside>
+                </form>
             </article>
         </section>
         <section>
-            <article>
+            <aside>
                 <p>HangVan</p>
                 <p>
                     &copy; HangVan Company. All rights reserved.
                 </p>
-            </article>
+            </aside>
         </section>
     </footer>
 </body>
