--- a/event.html
+++ b/event.html
@@ -304,6 +304,62 @@
         <!-- REFERENCE END -->
     </main>
 
+    <!-- footer -->
+    <footer>
+        <section>
+            <article>
+                <aside>
+                    <h6>pages</h6>
+                    <ul>
+                        <li><a href="./index.html">home</a></li>
+                        <li><a href="./event.html">event</a></li>
+                        <li><a href="./place.html">place</a></li>
+                    </ul>
+                </aside>
+                <aside>
+                    <h6>services</h6>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Customer Service</a></li>
+                        <li><a href="#">Terms and Condition</a></li>
+                    </ul>
+                </aside>
+            </article>
+            <article>
+                <aside>
+                    <h6>Contact</h6>
+                    <ul>
+                        <li><a href="#" class='fa-brands fa-facebook-f'></a></li>
+                        <li><a href="#" class='fa-brands fa-twitter'></a></li>
+                        <li><a href="#" class="fa-brands fa-github"></a></li>
+                        <li><a href="#" class="fa-brands fa-linkedin-in"></a></li>
+                    </ul>
+                    <a href="tel:+16048994480"><i class="fa-solid fa-phone"></i> +16048994480</a>
+                    <address><i class="fa-regular fa-envelope"></i> 889 W Pender St #200, Vancouver, BC V6C 3B2</address>
+                </aside>
+                <form>
+                    <h6>Newsletter</h6>
+                    <article>
+                        <input type="email" name="email" placeholder='Email address'>
+                        <input type="submit" name="submit" value='&#x2192;'>
+                    </article>
+                    <article>
+                        <input type="checkbox" name='subscribe'>
+                        Subscribe to receive communications from HangVan about our products and services. By subscribing, you confirm you have read and accept our privacy policy 
+                    </article>
+                </form>
+            </article>
+        </section>
+        <section>
+            <aside>
+                <p>HangVan</p>
+                <p>
+                    &copy; HangVan Company. All rights reserved.
+                </p>
+            </aside>
+        </section>
+    </footer>
+
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
