h_main: nav link connection is done

--- a/event.html
+++ b/event.html
@@ -29,9 +29,10 @@
                 <li class="dropdown_custom">
                     <a href="./event.html" class="dropbtn">EVENT</a>
                     <aside class="dropdown-content">
-                        <a href="#top3">Top3</a>
-                        <a href="#eFeature">Feature</a>
-                        
+                        <a href="#top3">Top 3 Festivals</a>
+                        <a href="#eFeature">Featured Event</a>
+                        <a href="#eList">Event List</a>
+                        <a href="#eReference">References</a>
                     </aside>
                 </li>
                 <li class="dropdown_custom">
@@ -55,7 +56,15 @@
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </li>
-                <li><a href="./event.html">EVENT</a></li>
+                <li>
+                    <a href="./event.html">EVENT</a>
+                    <ul>
+                        <li><a href="#top3">Top 3 Festivals</a></li>
+                        <li><a href="#eFeature">Featured Event</a></li>
+                        <li><a href="l#eList">Event List</a></li>
+                        <li><a href="#eReference">References</a></li>
+                    </ul>
+                </li>
                 <li><a href="./place.html">PLACE</a></li>
             </ul>
         </details>
