--- a/event.html
+++ b/event.html
@@ -50,10 +50,10 @@
                 <li>
                     <a href="./index.html">HOME</a>
                     <ul>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#event">Recent Event</a></li>
-                        <li><a href="#place">Place To Go</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="./index.html#about">About</a></li>
+                        <li><a href="./index.html#event">Recent Event</a></li>
+                        <li><a href="./index.html#place">Place To Go</a></li>
+                        <li><a href="./index.html#contact">Contact</a></li>
                     </ul>
                 </li>
                 <li>
