h_main: footer a link target_blank added

--- a/event.html
+++ b/event.html
@@ -283,29 +283,29 @@
                 <article>
                     <h4>event info sources</h4>
                     <aside>
-                        <a href="https://allevents.in/vancouver/once-upon-a-manger-singing-christmas-tree-2022/10000419859469977">Once Upon A Manger - Singing Christmas Tree 2022</a>
-                        <a href="https://allevents.in/vancouver/mingle-all-the-way-vancouver-christmas-market-with-the-gcp/10000468022747637">Mingle All The Way: Vancouver Christmas Market with the GCP</a>
-                        <a href="https://allevents.in/vancouver/vancouver-new-years-eve-2023-gatsbys-house-party/10000350820833557">Vancouver New Year's Eve 2023 - Gatsby's House Party
+                        <a href="https://allevents.in/vancouver/once-upon-a-manger-singing-christmas-tree-2022/10000419859469977" target="_blank">Once Upon A Manger - Singing Christmas Tree 2022</a>
+                        <a href="https://allevents.in/vancouver/mingle-all-the-way-vancouver-christmas-market-with-the-gcp/10000468022747637" target="_blank">Mingle All The Way: Vancouver Christmas Market with the GCP</a>
+                        <a href="https://allevents.in/vancouver/vancouver-new-years-eve-2023-gatsbys-house-party/10000350820833557" target="_blank">Vancouver New Year's Eve 2023 - Gatsby's House Party
                         </a>
-                        <a href="https://allevents.in/vancouver/united-for-ukraine-gala-dinner/10000432105387847">United for Ukraine Gala Dinner</a>
+                        <a href="https://allevents.in/vancouver/united-for-ukraine-gala-dinner/10000432105387847" target="_blank">United for Ukraine Gala Dinner</a>
                     </aside>
                 </article>
                 <article>
                     <aside>
-                        <a href="https://allevents.in/vancouver/canada-vs-belgium-wed-nov-23-11-00-am/10000464844350967">CANADA vs BELGIUM WorldCup Watching</a>
-                        <a href="https://allevents.in/vancouver/blind-tiger-comedy-show-everything-is-fine-early-show/10000461943885597">Blind Tiger Comedy Show: Everything is Fine</a>
-                        <a href="https://traveltriangle.com/blog/festivals-of-canada/">CANADA Top3 Festivals: traveltriangle.com</a>
-                        <a href="https://vancouversct.com/">Featured : Gallery</a>
+                        <a href="https://allevents.in/vancouver/canada-vs-belgium-wed-nov-23-11-00-am/10000464844350967" target="_blank">CANADA vs BELGIUM WorldCup Watching</a>
+                        <a href="https://allevents.in/vancouver/blind-tiger-comedy-show-everything-is-fine-early-show/10000461943885597" target="_blank">Blind Tiger Comedy Show: Everything is Fine</a>
+                        <a href="https://traveltriangle.com/blog/festivals-of-canada/" target="_blank">CANADA Top3 Festivals: traveltriangle.com</a>
+                        <a href="https://vancouversct.com/" target="_blank">Featured : Gallery</a>
                     </aside>
                 </article>
                 <article>
                     <h4>dropdown menu</h4>
                     <aside>
-                        <a href="https://www.w3schools.com/css/css_dropdowns.asp">www.w3schools.com</a>
+                        <a href="https://www.w3schools.com/css/css_dropdowns.asp" target="_blank">www.w3schools.com</a>
                     </aside>
                     <h4>carousel</h4>
                     <aside>
-                        <a href="https://getbootstrap.com/docs/5.2/components/carousel/">getbootstrap.com</a>
+                        <a href="https://getbootstrap.com/docs/5.2/components/carousel/" target="_blank">getbootstrap.com</a>
                     </aside>
                 </article>
             </section>
