main: working on about

--- a/index.html
+++ b/index.html
@@ -87,11 +87,48 @@
     <!-- Header end -->
 
     <main>
-
+        <!-- ABOUT -->
         <section class="about" id="about">
-
+            <article>
+                <h3>About Us</h3>
+            </article>
+            <section>
+                <article>
+                    <figure>
+                        <figcaption class="fa-solid fa-magnifying-glass-location"></figcaption>
+                    </figure>
+                    <aside>
+                        <h4>We offer every information about event & popular places</h4>
+                        <p>
+                            HangVan is an event & place discovery platform that gives a common ground to anyone who wants to create, promote, find and attend new adventure in vancouver. We believe that events positively impact our lives. We have been building HangVan to support event professionals with the best practices to reach the right audience.
+                        </p>
+                    </aside>
+                </article>
+                <article>
+                    <figure>
+                        <figcaption class="fa-solid fa-ticket"></figcaption>
+                    </figure>
+                    <aside>
+                        <h4>Book your ticket here</h4>
+                        <p>
+                            We help event professionals to sell tickets, manage attendees, and promote their events wherever they are. You can do all this on the go, so you can stay connected with the people who matter most—your attendees. We make your life easy so that you can do what you are best at—Making The World Happening With Events.
+                        </p>
+                    </aside>
+                </article>
+                <article>
+                    <figure>
+                        <figcaption class="fa-solid fa-receipt"></figcaption>
+                    </figure>
+                    <aside>
+                        <h4>Get additional information</h4>
+                        <p>
+                            Please share your experience! The more you participate, the more detailed and reliable information you get about your experience. HangVan provides information on events and festivals as well as famous places and activities in Vancouver
+                        </p>
+                    </aside>
+                </article>
+            </section>
         </section>
-
+        <!-- ABOUT END -->
         <!-- EVENT -->
         <section class="event" id="event">
             <article>
