main: about & footer is changed

--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
                         <p>Fri, Dec 2,7:30 pm</p>
                         <address><i class="fa-solid fa-location-dot"></i> Broadway Church, 2700 East Broadway, Vancouver</address>
                         <small>Free</small>
-                        <form>
+                        <article class="progress">
                             <label for="people">34 seats left</label>
                             <progress id="people" value="70" max="100">70%</progress>
-                        </form>
+                        </article>
                     </aside>
                 </a>
                 <a href="#">
