Main: CSS_tablet: Header section done

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <article>
             <aside>
                 <h2>Are you ready for Christmas?</h2>
-                <strong>Prepare with <span>HangVan</span>!</strong>
+                <strong>Prepare with <span>HangVan!</span></strong>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit alias nobis totam veniam itaque nisi fugiat repellat dolorum expedita exercitationem.
                 </p>
