--- a/place.html
+++ b/place.html
@@ -59,7 +59,10 @@
         </details>
     </nav>
     <!-- NAV END -->
+
+    <!-- header -->
     <header class='y_header'>
+
     </header>
   <!-- main -->
     <main>
@@ -266,6 +269,13 @@
                 <h4>now playing</h4>
                 <p><span></span><i class='fa-solid fa-ticket'></i><span></span></p>
             </aside>
+            <article>
+                <h5>Check it out!</h5>
+                <p>
+                    This section shows that what movie is being shown on the screen and lets you know the details about location, theatre, date. If you are interested in any film, click Read more and enjoy it!
+                </p>
+                <a href="#">Read more...</a>
+            </article>
             <section id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                 <article class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -376,6 +386,60 @@
             </section>
         </section>
     </main>
+    <!-- footer -->
+    <footer>
+        <section>
+            <article>
+                <aside>
+                    <h6>about</h6>
+                    <ul>
+                        <li><a href="#">about</a></li>
+                        <li><a href="#">about</a></li>
+                        <li><a href="#">about</a></li>
+                    </ul>
+                </aside>
+                <aside>
+                    <h6>services</h6>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Customer Service</a></li>
+                        <li><a href="#">Terms and Condition</a></li>
+                    </ul>
+                </aside>
+                <aside>
+                    <h6>Contact</h6>
+                    <ul>
+                        <li><a href="#" class='fa-brands fa-facebook-f'></a></li>
+                        <li><a href="#" class='fa-brands fa-twitter'></a></li>
+                        <li><a href="#" class="fa-brands fa-github"></a></li>
+                        <li><a href="#" class="fa-brands fa-linkedin-in"></a></li>
+                    </ul>
+                    <i class="fa-solid fa-phone">889 W Pender St #200, Vancouver, BC V6C 3B2</i>
+                    <i class="fa-regular fa-envelope">+16048994480</i>
+                    <address>889 W Pender St #200, Vancouver, BC V6C 3B2</address>
+                </aside>
+                <aside>
+                    <h6>Newsletter</h6>
+                    <article>
+                        <input type="email" name="email" placeholder='Email address'>
+                        <input type="subit" name="submit" value='U+2192'>
+                    </article>
+                    <article>
+                        <input type="checkbox" name='subscribe'>
+                        Subscribe to receive communications from Aesop about our products and services. By subscribing, you confirm you have read and accept our privacy policy 
+                    </article>
+                </aside>
+            </article>
+        </section>
+        <section>
+            <article>
+                <p>HangVan</p>
+                <p>
+                    &copy; HangVan Company. All rights reserved.
+                </p>
+            </article>
+        </section>
+    </footer>
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
