h_main: category is done

--- a/event.html
+++ b/event.html
@@ -170,10 +170,67 @@
         <!-- CATERORY -->
         <section class="eCategory" id="eCategory">
             <article>
+                <span></span>
                 <h3>Event Category</h3>
+                <span></span>
             </article>
             <section>
-                
+                <figure>
+                    <img src="./img/top1.jpeg" alt="category1">
+                    <figcaption>
+                        <h4>festivals</h4>
+                        <a href="#">Discover More</a>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="./img/top1.jpeg" alt="category1">
+                    <figcaption>
+                        <h4>art events</h4>
+                        <a href="#">Discover More</a>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="./img/top1.jpeg" alt="category1">
+                    <figcaption>
+                        <h4>charity</h4>
+                        <a href="#">Discover More</a>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="./img/top1.jpeg" alt="category1">
+                    <figcaption>
+                        <h4>sports event</h4>
+                        <a href="#">Discover More</a>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="./img/top1.jpeg" alt="category1">
+                    <figcaption>
+                        <h4>workshops</h4>
+                        <a href="#">Discover More</a>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="./img/top1.jpeg" alt="category1">
+                    <figcaption>
+                        <h4>entertainments</h4>
+                        <a href="#">Discover More</a>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="./img/top1.jpeg" alt="category1">
+                    <figcaption>
+                        <h4>holiday events</h4>
+                        <a href="#">Discover More</a>
+                    </figcaption>
+                </figure>
+                <figure>
+                    <img src="./img/top1.jpeg" alt="category1">
+                    <figcaption>
+                        <h4>performances</h4>
+                        <a href="#">Discover More</a>
+                    </figcaption>
+                </figure>
             </section>
         </section>
         <!-- LIST -->
