--- a/event.html
+++ b/event.html
@@ -128,8 +128,9 @@
     <main>
         <!-- FEATURE -->
         <section class="eFeature" id="eFeature">
-            <article>
+            <article class="title">
                 <h3>Featured Event on <span>DEC</span></h3>
+                <p><span></span><i class='fa-solid fa-ticket'></i><span></span></p>
             </article>
             <section>
                 <figure>
@@ -169,10 +170,9 @@
         <!-- FEATURE END -->
         <!-- CATERORY -->
         <section class="eCategory" id="eCategory">
-            <article>
-                <span></span>
+            <article class="title">
                 <h3>Event Category</h3>
-                <span></span>
+                <p><span></span><i class='fa-solid fa-ticket'></i><span></span></p>
             </article>
             <section>
                 <figure>
@@ -235,10 +235,9 @@
         </section>
         <!-- LIST -->
         <section class="eList" id="eList">
-            <article>
-                <span></span>
+            <article class="title">
                 <h3>Event List</h3>
-                <span></span>
+                <p><span></span><i class='fa-solid fa-ticket'></i><span></span></p>
             </article>
             <section>
                 <figure>
@@ -331,11 +330,32 @@
             </section>
         </section>
         <!-- LIST END -->
+        <section class="eArticle" id="eArticle">
+            <article class="title">
+                <h3>Articles</h3>
+                <p><span></span><i class='fa-solid fa-ticket'></i><span></span></p>
+            </article>
 
+
+        </section>
+        <!-- REGISTER -->
+        <section class="eRegister" id="eRegister">
+            <article class="title">
+                <h3>Are you a event organizer?</h3>
+                <p>
+                    If so, you can register your event through below form
+                </p>
+            </article>
+            <section>
+
+            </section>
+        </section>
+        <!-- REGISTER END -->
         <!-- REFERENCE -->
         <section class="eReference" id="eReference">
-            <article>
+            <article class="title">
                 <h3>References</h3>
+                <p><span></span><i class='fa-solid fa-ticket'></i><span></span></p>
             </article>
             <section>
                 <article>
