--- a/place.html
+++ b/place.html
@@ -47,14 +47,31 @@
                 <li>
                     <a href="./index.html">HOME</a>
                     <ul>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#event">Recent Event</a></li>
-                        <li><a href="#place">Place To Go</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="./index.html#about">About</a></li>
+                        <li><a href="./index.html#event">Recent Event</a></li>
+                        <li><a href="./index.html#place">Place To Go</a></li>
+                        <li><a href="./index.html#contact">Contact</a></li>
                     </ul>
                 </li>
-                <li><a href="./event.html">EVENT</a></li>
-                <li><a href="./place.html">PLACE</a></li>
+                <li>
+                    <a href="./event.html">EVENT</a>
+                    <ul>
+                        <li><a href="./event.html#about">About</a></li>
+                        <li><a href="./event.html#event">Recent Event</a></li>
+                        <li><a href="./event.html#place">Place To Go</a></li>
+                        <li><a href="./event.html#contact">Contact</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="./place.html">PLACE</a>
+                    <ul>
+                        <li><a href="#restaurant">Restaurant</a></li>
+                        <li><a href="#activities">Activities</a></li>
+                        <li><a href="#exhibition">Exhibition</a></li>
+                        <li><a href="#theatre">Theatre</a></li>
+                        <li><a href="#reference">Reference</a></li>
+                    </ul>
+                </li>
             </ul>
         </details>
     </nav>
@@ -335,9 +352,11 @@
                     </button>
                   </h2>
                   <figure id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                    <img src="/img/reference_1.png" alt="">
+                    <img src="/img/reference_1.png" alt="reference_1">
                     <figcaption>
-                        <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</p>
+                        <p class="accordion-body">
+                            This is reference what I referred. Here are image and link. 
+                        </p>
                         <a class="accordion-body" href="https://www.squarespace.com/templates/hoyd-fluid-demo" target='_blank'>squarespace.com</a>
                     </figcaption>
                   </figure>
@@ -349,9 +368,11 @@
                     </button>
                   </h2>
                   <figure id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headinTwo" data-bs-parent="#accordionFlushExample">
-                    <img src="/img/reference_2.png" alt="">
+                    <img src="/img/reference_2.png" alt="reference_2">
                     <figcaption>
-                        <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</p>
+                        <p class="accordion-body">
+                            This is reference what I referred. Here are image and link. 
+                        </p>
                         <a class="accordion-body" href="https://www.tripadvisor.ca/" target='_blank'>tripadvisor.ca</a>
                     </figcaption>
                   </figure>
@@ -363,9 +384,11 @@
                     </button>
                   </h2>
                   <figure id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                    <img src="/img/reference_3.png" alt="">
+                    <img src="/img/reference_3.png" alt="reference_3">
                     <figcaption>
-                        <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</p>
+                        <p class="accordion-body">
+                            This is reference what I referred. Here are image and link. 
+                        </p>
                         <a class="accordion-body" href="https://www.yanolja.com/exhibition/6563?cio=updated" target='_blank'>yanolja.com</a>
                     </figcaption>
                   </figure>
@@ -377,8 +400,11 @@
                     </button>
                   </h2>
                   <figure id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headinFour" data-bs-parent="#accordionFlushExample">
+                    <img src="/img/reference_4.png" alt="reference_4">
                     <figcaption>
-                        <p class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</p>
+                        <p class="accordion-body">
+                            This is reference what I referred. Here are image and link. 
+                        </p>
                         <a class="accordion-body" href="https://www.whistlerblackcomb.com/" target='_blank'>whistlerblackcomb.com</a>
                     </figcaption>
                   </figure>
