y_main: HTML,CSS:Review section done

--- a/place.html
+++ b/place.html
@@ -47,10 +47,11 @@
                 <li>
                     <a href="./index.html">HOME</a>
                     <ul>
-                        <li><a href="./index.html#about">About</a></li>
-                        <li><a href="./index.html#event">Recent Event</a></li>
-                        <li><a href="./index.html#place">Place To Go</a></li>
-                        <li><a href="./index.html#contact">Contact</a></li>
+                        <li><a href="./index.html#eFeature">Featured Event</a></li>
+                        <li><a href="./index.html#eCategory">Category</a></li>
+                        <li><a href="./index.html#eArticle">Event List</a></li>
+                        <li><a href="./index.html#eRegister">Register Event</a></li>
+                        <li><a href="./index.html#eReference">References</a></li>
                     </ul>
                 </li>
                 <li>
@@ -69,6 +70,7 @@
                         <li><a href="#activities">Activities</a></li>
                         <li><a href="#exhibition">Exhibition</a></li>
                         <li><a href="#theatre">Theatre</a></li>
+                        <li><a href="#review">Review</a></li>
                         <li><a href="#reference">Reference</a></li>
                     </ul>
                 </li>
@@ -79,7 +81,7 @@
 
     <!-- header -->
     <header class='y_header'>
-
+        
     </header>
   <!-- main -->
     <main>
@@ -336,6 +338,68 @@
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
+            </section>
+        </section>
+        <!-- review section -->
+        <section class="review" id="review">
+            <aside>
+                <h4>Review</h4>
+                <p><span></span><i class='fa-solid fa-ticket'></i><span></span></p>
+            </aside>
+            <article>
+                <h5>Check it out!</h5>
+                <p>
+                    Browse all review from users who are utilizing our website. Most users left comment what they experienced, how they felt, and why they recommend.
+                </p>
+                <a href="#">Read more...</a>
+            </article>
+            <section>
+                <article>
+                    <figure>
+                        <img src="/img/review_1.jpg" alt="review_1.jpg">
+                    </figure>
+                    <blockquote>
+                        <cite>- Shawn Klause -</cite>
+                        "I love HangVan! They always show where we can go and enjoy. Especially for us, our family, it is so useful to decide where we can go out every weekend. Evertime we visited, we ejoyed a lot. That's why I already recommended this wesite to my friends who have also family or who are couple.  Thankyou HangVan!"
+                        <aside>
+                            <i class="fa-solid fa-comment"> 1.1k comments</i>
+                            <i class="fa-solid fa-heart"> 75 Liked</i>
+                            <i class="fa-solid fa-share"> 110 Shared</i>
+                            <i class="fa-solid fa-clock"> 2020.09.10</i>
+                        </aside>
+                    </blockquote>
+                </article>
+                <article>
+                    <figure>
+                        <img src="/img/review_2.jpg" alt="review_2.jpg">
+                    </figure>
+                    <blockquote>
+                        <cite>- Wendy Shin -</cite>
+                        "I found good exhibition here, if I didn't checked in HAngVan, I might miss this rare oppurtunity to visit nice exhibition. Also, I could pay the ticket in discounted price due to notice from HangVan. "
+                        <aside>
+                            <i class="fa-solid fa-comment"> 2.4k comments</i>
+                            <i class="fa-solid fa-heart"> 70 Liked</i>
+                            <i class="fa-solid fa-share"> 256 Shared</i>
+                            <i class="fa-solid fa-clock"> 2022.07.21</i>
+                        </aside>
+                    </blockquote>
+                    
+                </article>
+                <article>
+                    <figure>
+                        <img src="/img/review_3.jpg" alt="review_3.jpg">
+                    </figure>
+                    <blockquote>
+                        <cite>- Sebastian Pachon -</cite>
+                        "My girlfriend and I searched fancy restaurant here, and we went there, ate high quality cuisine with cozy athmosphere and it was awesome. We spent good time thanks for you"
+                        <aside>
+                            <i class="fa-solid fa-comment"> 740 comments</i>
+                            <i class="fa-solid fa-heart"> 40 Liked</i>
+                            <i class="fa-solid fa-share"> 25 Shared</i>
+                            <i class="fa-solid fa-clock"> 2021.11.30</i>
+                        </aside>
+                    </blockquote>
+                </article>
             </section>
         </section>
         <!-- reference section -->
