y_main:HTML,CSS: Header section is done

--- a/place.html
+++ b/place.html
@@ -81,7 +81,14 @@
 
     <!-- header -->
     <header class='y_header'>
-        
+        <article>
+            <h2>What are you looking for?</h2>
+            <p>you can find whatever you want, using the search. Whatever you search, we'll show you the answer.</p>
+            <form>
+                <input type="search" name='search' placeholder='"Fancy Restaurant"'>
+                <input type="submit" name='submit' value='&#128269'>
+            </form>
+        </article>
     </header>
   <!-- main -->
     <main>
