--- a/index.html
+++ b/index.html
@@ -29,14 +29,24 @@
                 <li class="dropdown_custom">
                     <a href="./event.html" class="dropbtn">EVENT</a>
                     <aside class="dropdown-content">
-                        <a href="./event.html#top3">Top 3 Festivals</a>
                         <a href="./event.html#eFeature">Featured Event</a>
+                        <a href="./event.html#eCategory">Category</a>
                         <a href="./event.html#eList">Event List</a>
+                        <a href="./event.html#eArticle">Articles</a>
+                        <a href="./event.html#eRegister">Register Event</a>
                         <a href="./event.html#eReference">References</a>
                     </aside>
                 </li>
                 <li class="dropdown_custom">
                     <a href="./place.html" class="dropbtn">PLACE</a>
+                    <aside class="dropdown-content">
+                        <a href="./place.html#restaurant">Restaurant</a>
+                        <a href="./place.html#activities">Activities</a>
+                        <a href="./place.html#exhibition">Exhibition</a>
+                        <a href="./place.html#theatre">Theatre</a>
+                        <a href="./place.html#">?</a>
+                        <a href="./place.html#reference">Reference</a>
+                    </aside>
                 </li>
             </ul>
             <form>
@@ -59,13 +69,25 @@
                 <li>
                     <a href="./event.html">EVENT</a>
                     <ul>
-                        <li><a href="./event.html#top3">Top 3 Festivals</a></li>
                         <li><a href="./event.html#eFeature">Featured Event</a></li>
+                        <li><a href="./event.html#eCategory">Category</a></li>
                         <li><a href="./event.html#eList">Event List</a></li>
+                        <li><a href="./event.html#eArticle">Articles</a></li>
+                        <li><a href="./event.html#eRegister">Register Event</a></li>
                         <li><a href="./event.html#eReference">References</a></li>
                     </ul>
                 </li>
-                <li><a href="./place.html">PLACE</a></li>
+                <li>
+                    <a href="./place.html">PLACE</a>
+                    <ul>
+                        <li><a href="./place.html#restaurant">Restaurant</a></li>
+                        <li><a href="./place.html#activities">Activities</a></li>
+                        <li><a href="./place.html#exhibition">Exhibition</a></li>
+                        <li><a href="./place.html#theatre">Theatre</a></li>
+                        <li><a href="./place.html#">?</a></li>
+                        <li><a href="./place.html#reference">Reference</a></li>
+                    </ul>
+                </li>
             </ul>
         </details>
     </nav>
