main: header padding modified

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <h2>Are you ready for Christmas?</h2>
                 <strong>Prepare with <span>HangVan!</span></strong>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit alias nobis totam veniam itaque nisi fugiat repellat dolorum expedita exercitationem.
+                    Events this year include the PNE Winter Fair in Vancouver, Canyon Lights at Capilano Bridge, Christmas Glow in Langley and the Vancouver Christmas Market at Jack Poole Plaza. There is also the Soar with Santa film at FlyOver Canada...
                 </p>
                 <a href="#">Read more</a>
             </aside>
