--- a/place.html
+++ b/place.html
@@ -86,7 +86,7 @@
             <p>you can find whatever you want, using the search. Whatever you search, we'll show you the answer.</p>
             <form>
                 <input type="search" name='search' placeholder='"Fancy Restaurant"'>
-                <input type="submit" name='submit' value='&#128269'>
+                <input type="submit" name='submit' value="&#128269;">
             </form>
         </article>
     </header>
@@ -438,7 +438,7 @@
                         Reference #2
                     </button>
                   </h2>
-                  <figure id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headinTwo" data-bs-parent="#accordionFlushExample">
+                  <figure id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
                     <img src="/img/reference_2.png" alt="reference_2">
                     <figcaption>
                         <p class="accordion-body">
@@ -470,7 +470,7 @@
                         Reference #4
                     </button>
                   </h2>
-                  <figure id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headinFour" data-bs-parent="#accordionFlushExample">
+                  <figure id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
                     <img src="/img/reference_4.png" alt="reference_4">
                     <figcaption>
                         <p class="accordion-body">
@@ -488,11 +488,11 @@
         <section>
             <article>
                 <aside>
-                    <h6>about</h6>
+                    <h6>pages</h6>
                     <ul>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">about</a></li>
-                        <li><a href="#">about</a></li>
+                        <li><a href="./index.html">home</a></li>
+                        <li><a href="./event.html">event</a></li>
+                        <li><a href="./place.html">place</a></li>
                     </ul>
                 </aside>
                 <aside>
@@ -503,6 +503,8 @@
                         <li><a href="#">Terms and Condition</a></li>
                     </ul>
                 </aside>
+            </article>
+            <article>
                 <aside>
                     <h6>Contact</h6>
                     <ul>
@@ -511,30 +513,29 @@
                         <li><a href="#" class="fa-brands fa-github"></a></li>
                         <li><a href="#" class="fa-brands fa-linkedin-in"></a></li>
                     </ul>
-                    <i class="fa-solid fa-phone">889 W Pender St #200, Vancouver, BC V6C 3B2</i>
-                    <i class="fa-regular fa-envelope">+16048994480</i>
-                    <address>889 W Pender St #200, Vancouver, BC V6C 3B2</address>
+                    <a href="tel:+16048994480"><i class="fa-solid fa-phone"></i> +16048994480</a>
+                    <address><i class="fa-regular fa-envelope"></i> 889 W Pender St #200, Vancouver, BC V6C 3B2</address>
                 </aside>
-                <aside>
+                <form>
                     <h6>Newsletter</h6>
                     <article>
                         <input type="email" name="email" placeholder='Email address'>
-                        <input type="subit" name="submit" value='U+2192'>
+                        <input type="submit" name="submit" value='&#x2192;'>
                     </article>
                     <article>
                         <input type="checkbox" name='subscribe'>
-                        Subscribe to receive communications from Aesop about our products and services. By subscribing, you confirm you have read and accept our privacy policy 
+                        Subscribe to receive communications from HangVan about our products and services. By subscribing, you confirm you have read and accept our privacy policy 
                     </article>
-                </aside>
+                </form>
             </article>
         </section>
         <section>
-            <article>
+            <aside>
                 <p>HangVan</p>
                 <p>
                     &copy; HangVan Company. All rights reserved.
                 </p>
-            </article>
+            </aside>
         </section>
     </footer>
     <!-- JavaScript Bundle with Popper -->
