--- a/event.html
+++ b/event.html
@@ -44,7 +44,7 @@
                         <a href="./place.html#activities">Activities</a>
                         <a href="./place.html#exhibition">Exhibition</a>
                         <a href="./place.html#theatre">Theatre</a>
-                        <a href="./place.html#">?</a>
+                        <a href="./place.html#review">Review</a>
                         <a href="./place.html#reference">Reference</a>
                     </aside>
                 </li>
@@ -84,7 +84,7 @@
                         <li><a href="./place.html#activities">Activities</a></li>
                         <li><a href="./place.html#exhibition">Exhibition</a></li>
                         <li><a href="./place.html#theatre">Theatre</a></li>
-                        <li><a href="./place.html#">?</a></li>
+                        <li><a href="./place.html#review">Review</a></li>
                         <li><a href="./place.html#reference">Reference</a></li>
                     </ul>
                 </li>
